--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,3 +1,4 @@
+= image_tag @post.image.url(:medium)
 %h1= @post.title
 %p= @post.link
 %p= @post.description
@@ -6,3 +7,5 @@
 =link_to "Edit", edit_post_path(@post)
 =link_to "Destroy", post_path(@post), method: :delete, data:{ confirm: "Are you sure?" }
 =link_to "Home", root_path
+
+ 	
