--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,16 +4,16 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name, required: true, autofocus: true %>
-    <%= f.input :email, required: true %>
+    <%= f.input :name, required: true, autofocus: true, :input_html => { :id =>"name"} %>
+    <%= f.input :email, required: true, :input_html => { :id =>"email"} %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <%= f.input :password, autocomplete: "off", hint: " leave it blank if you don't want to change it", required: false, :input_html => { :id =>"new_password"} %>
+    <%= f.input :password_confirmation, required: false, :input_html => { :id =>"password_confirmation"} %>
+    <%= f.input :current_password, hint: " we need your current password to confirm your changes", required: true, :input_html => { :id =>"password"} %>
   </div>
 
   <div class="form-actions">
