--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -12,7 +12,7 @@
 		%span
 			Share your inspiration and see what's inspiring others.
 
-#posts			
+#posts
 	-@posts.each do |post|
 		.post
 			.post_image
@@ -32,3 +32,4 @@
 							%i.fa.fa-thumbs-o-up
 							= post.get_likes.size
 
+= will_paginate @posts
